# pgsd-sph

./: .gitignore  CHANGELOG.md  LICENSE  README.md  test_pgsd2vtu.py
.github/workflows/: ci.yml
pgsd/: INSTALLING.rst
pgsd-3.2.0/: .gitignore  CMakeLists.txt
pgsd-3.2.0/pgsd/: __init__.py  __main__.py  conftest.py  fl.pyx  hoomd.py  libpgsd.pxd  pgsd.c  pgsd.h  pypgsd.py  version.py
pgsd-3.2.0/pgsd/test/: test_hoomd.py
pgsd-3.2.0/scripts/: CMakeLists.txt  benchmark-hoomd.py  benchmark-read.cc
pgsd/CMake/: MPISetup.cmake
pgsd/doc/: pgsd.tex
pgsd/pgsd/: CMakeLists.txt  fl.pyx  pgsd.c  pgsd.h  pypgsd.py
pgsd/pgsd/test/: test_fl.py
pgsd/scripts/: benchmark-write.cc
